--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.21.3",
-    "sort-by": "^1.2.0",
-    "theme-change": "^2.5.0"
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
@@ -28,7 +27,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.17",
-    "daisyui": "^3",
+    "daisyui": "^4.6.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.3",
